<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_list"
    android:alpha=".8"
    android:padding="10dp"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/uniId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="ID:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uniName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name_walton_hi_tech_university"
        app:layout_constraintEnd_toStartOf="@+id/btnEditUni"
        app:layout_constraintStart_toEndOf="@+id/uniId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uniESTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/since_2008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uniId" />

    <ImageView
        android:id="@+id/btnEditUni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        android:contentDescription="@string/content_desc"/>

    <ImageView
        android:id="@+id/btnDeleteUni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditUni"
        app:srcCompat="@drawable/delete_icon"
        android:contentDescription="@string/content_desc"/>

    <TextView
        android:id="@+id/isGovApproved"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/is_gov_approved_yes"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteUni"
        app:layout_constraintStart_toEndOf="@+id/uniESTD"
        app:layout_constraintTop_toBottomOf="@+id/uniName" />
</androidx.constraintlayout.widget.ConstraintLayout>