<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/bg_dialog_common"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="monospace"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="#E91E63"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etUnID"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="todo"
            android:background="@drawable/bg_btn_common"
            android:backgroundTint="@color/editeTextTint"
            android:ems="10"
            android:hint="@string/enter_university_id"
            android:inputType="textPersonName"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/etUniName"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="todo"
            android:background="@drawable/bg_btn_common"
            android:backgroundTint="@color/editeTextTint"
            android:ems="10"
            android:hint="@string/enter_university_name"
            android:inputType="textPersonName"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUnID" />

        <EditText
            android:id="@+id/etUniESTD"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="todo"
            android:background="@drawable/bg_btn_common"
            android:backgroundTint="@color/editeTextTint"
            android:ems="10"
            android:hint="@string/select_date_of_establishment"
            android:inputType="textPersonName"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUniName" />

        <CheckBox
            android:id="@+id/isGovApprovedCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="monospace"
            android:text="@string/is_government_approved"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUniESTD" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_btn_common"
            android:backgroundTint="@color/btn_green"
            android:fontFamily="monospace"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/isGovApprovedCheckbox"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>